{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 21,
  "lineage": "4c22b47e-d29b-068d-4ad3-0e5e20998edb",
  "resources": [
    {
      "module": "module.base",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnet_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:298390376199:route-table/rtb-01988a3276e306cbf",
            "id": "rtb-01988a3276e306cbf",
            "owner_id": "298390376199",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-054758adc885cc336"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.base",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnet_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:298390376199:route-table/rtb-0c2581f0de78bbcd3",
            "id": "rtb-0c2581f0de78bbcd3",
            "owner_id": "298390376199",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-054758adc885cc336"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.base",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_route_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a30fae396baf1597",
            "route_table_id": "rtb-01988a3276e306cbf",
            "subnet_id": "subnet-0e2cdad4f26985a01"
          },
          "dependencies": [
            "module.base.aws_route_table.private_subnet_route_table",
            "module.base.aws_subnet.private_subnet",
            "module.base.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.base",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_route_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c1dd35764f836d63",
            "route_table_id": "rtb-0c2581f0de78bbcd3",
            "subnet_id": "subnet-06d0704cd1360542d"
          },
          "dependencies": [
            "module.base.aws_route_table.public_subnet_route_table",
            "module.base.aws_subnet.public_subnet",
            "module.base.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.base",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:298390376199:subnet/subnet-0e2cdad4f26985a01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2cdad4f26985a01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "298390376199",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-054758adc885cc336"
          },
          "dependencies": [
            "module.base.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.base",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:298390376199:subnet/subnet-06d0704cd1360542d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d0704cd1360542d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "298390376199",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-054758adc885cc336"
          },
          "dependencies": [
            "module.base.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.base",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:298390376199:vpc/vpc-054758adc885cc336",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-03552a8db18729fe7",
            "default_route_table_id": "rtb-01d780eb5eb482c03",
            "default_security_group_id": "sg-0d250a1a373f20c07",
            "dhcp_options_id": "dopt-09a82403f99331052",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-054758adc885cc336",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01d780eb5eb482c03",
            "owner_id": "298390376199"
          }
        }
      ]
    }
  ]
}